# finetune-scibert

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: playground.ipynb
scibert/: __init__.py  config.py  datamodule.py  hyperparameter_tuning.py  inference.py  main.py  model.py
scibert/features/: build_features.py
scibert/models/: dispatcher.py  network.py
scibert/preprocessing/: make_data.py  utils.py
scibert/utils/: decorators.py  logger.py  serializer.py  utils.py
tests/: test_data.py  test_feature.py  test_inference.py  test_train.py
