[tool.poetry]
name = "scibert-procodex"
version = "0.1.0"
description = ""
authors = ["kce3kor <kamal.shrestha@in.bosch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
numpy = "^1.25.2"
nltk = "^3.8.1"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.0"
transformers = "^4.32.1"
torch = "2.0.0"
scikit-learn = "^1.3.0"
loguru = "^0.7.0"
pydantic = "1.10.12"
lightning = "^2.0.8"
tensorboard = "^2.14.0"
torchmetrics = "^1.1.1"
jsonargparse = {extras = ["signatures"], version = "^4.24.1"}
torchsummary = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
notebook = "^7.0.3"
pdoc = "^14.0.0"
pytest = "^7.4.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
